# clem

./: .gitignore  CLAUDE_META_LEARNING_DUCKDB.md  MEMORY_EXTRACTION_RESEARCH.md  Makefile  NEW_VISION.md  README.md  ROADMAP.md  VISION.md  pyproject.toml
docs/diagrams/: Makefile  README.md  architecture.mmd  data-flow.mmd  domain-model.mmd  sleep-cycle.mmd  web-architecture.mmd
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/pages/: Dashboard.tsx  SessionDetail.tsx
src/clem/: __init__.py  clem.py  cli.py  config.py
src/clem/core/: __init__.py  domain.py  project.py
src/clem/database/: __init__.py  builder.py  manager.py  schema.py
src/clem/display/: __init__.py  tables.py
src/clem/queries/: __init__.py  domains.py  events.py  projects.py  sessions.py
src/clem/web/: __init__.py  app.py  models.py
src/clem/web/routers/: __init__.py  domains.py  events.py  projects.py  sessions.py  stats.py
tests/: test_clem.py  test_cli_integration.py  test_config.py  test_database.py  test_display.py  test_domain.py  test_queries.py  test_web_api.py
