[project]
name = "clem"
version = "0.1.0"
description = "Claude Learning & Experience Manager - AI-powered session memory and knowledge extraction"
readme = "README.md"
authors = [
    { name = "Josh Peak", email = "joshpeak05@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0.0",
    "rich>=13.0.0",
    "sentence-transformers>=2.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[project.scripts]
clem = "clem.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradually enable
check_untyped_defs = true
exclude = ["tmp/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
